--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.0.3",
-    "send": "^0.18.0"
+    "send": "^0.18.0",
+    "vercel": "^28.18.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
